Slight spacing tweaks from Mandy, abstract handleAnimationFinish to a new function, fix up test descriptions

--- a/src/component/field/Dropdown.sass
+++ b/src/component/field/Dropdown.sass
@@ -73,8 +73,8 @@
   overflow-x: hidden;
   overflow-y: scroll;
   background-color: $zd-color-white;
-  padding-top: #{8/$font-size}rem;
-  padding-bottom: #{8/$font-size}rem;
+  padding-top: #{3/$font-size}rem;
+  padding-bottom: #{3/$font-size}rem;
   box-shadow: 0 0 #{6/$font-size}rem 0 rgba($base-shadow, .2);
 
   /*
