--- a/src/component/field/DropdownOption.sass
+++ b/src/component/field/DropdownOption.sass
@@ -31,7 +31,9 @@
 }
 
 .fieldBorder {
-  composes: u-borderBottom u-marginBT u-paddingBT from '../../styles/utils.scss';
+  composes: u-borderBottom from '../../styles/utils.scss';
+  margin-bottom: #{3/$font-size}rem;
+  padding-bottom: #{3/$font-size}rem;
 }
 
 .arrowNext {
